@@ -1,6 +1,5 @@
 /* { dg-do compile } */
 /* { dg-options "-O2 -fipa-sra -fdump-tree-eipa_sra-details"  } */
-/* { dg-require-effective-target non_strict_align } */
 
 struct bovid
 {
